--- a/content/post/2024-05-08-untangling-nassim-taleb-s-criticism-of-that-headline-grabbing-intermittent-fasting-story/index.Rmd
+++ b/content/post/2024-05-08-untangling-nassim-taleb-s-criticism-of-that-headline-grabbing-intermittent-fasting-story/index.Rmd
@@ -38,13 +38,11 @@ He goes on to make a few criticisms of the study and later states that "small pr
 
 For the remainder of this post I will discuss his analysis regarding sample size in relation to the event rates observed in this study^[Which he suggests is all that is needed to dismiss the results, even if you ignore potential issues in setup: https://x.com/nntaleb/status/1770467069454073997].
 
-There is indeed a need for a larger sample when there is a low event rate (414 participants in the intermittent fasting group is smaller than ideal)[^study-design]. However the sample size in this case is not necessarily a justification for throwing-out the small p-value on a post-hoc basis. The p-value represents (taking into account the sample size and the underlying variability / event rate) how likely it is you would get the observed results by random^[p-value of 0.006 suggests these results are unlikely to have occurred by chance alone.]. The need for a large sample size for rare events often has more to do with increasing the power of your study to accommodate for the difficulty of detecting rare events^[related to type 2 errors: ~failure to detect an effect when one truly exists -- a false negative] compared to the problem (that Taleb is alleging) of getting a false positive finding where an effect actually does *not* exist^[Which relates to a type 1 error] ^[The points in this paragraph are also articulated in my [reply](https://x.com/brshallo/status/1772422125069963359) on his thread: ![](images/bry-reply-taleb.png)].
+There is indeed a need for a larger sample when there is a low event rate (414 participants in the intermittent fasting group is smaller than ideal)[^study-design]. However the sample size in this case is not necessarily a justification for throwing-out the small p-value on a post-hoc basis. The p-value represents (taking into account the sample size and the underlying variability / event rate) how likely it is you would get the observed results by random^[p-value of 0.006 suggests these results are unlikely to have occurred by chance alone.]. The need for a large sample size for rare events often has to do with increasing the power of your study to accommodate for the difficulty of detecting rare events^[related to type 2 errors: ~failure to detect an effect when one truly exists -- a false negative] compared to the problem (that Taleb is alleging) of getting a false positive finding where an effect actually does *not* exist^[Which relates to a type 1 error] ^[The points in this paragraph are also articulated in my [reply](https://x.com/brshallo/status/1772422125069963359) on his thread: ![](images/bry-reply-taleb.png)].
 
 [^study-design]: The concern about sample size often comes up during study design. (Note also that this study is using a database from a national survey, this isn't an experiment or something where they are able to control sample size directly.) If the thing you are measuring is rare, you will need a much larger sample in order to detect it. This increases your "statistical power": the chance you will reject the null hypothesis (i.e. get a small enough p-value) if indeed you should reject it. Given the underlying event rates and an alpha of 0.05 -- a common default -- a sample size of 414 would indeed likely be too small, but for the reason that this wouldn't give you enough statistical power (a common default for statistical power is 0.80 and this sample size, given the other parameters, would put you short of that). (...at most points in this post I write a bit colloquially / loosely so as to avoid using terms like null hypothesis...)
 
-
-
-Still, again excluding other concerns regarding design or the weaknesses inherent in this being an observational study, a researcher might question the validity of the p-value of 0.006 based on the fact that multiple tests were done within the study^[and call for a corresponding adjustment of the p-value that takes this into account like a [Bonferroni correction](https://en.wikipedia.org/wiki/Bonferroni_correction), an approach Taleb does mention in *Antifragile*.] or critique the use of frequentist statistics and instead suggest using Bayesian approaches or nonparametric methods^[It's tough to know without actually trying it, my guess is p of 0.006 would have a good chance surviving adjustments in statistical approach though.]. (As a reminder, we're just looking at a poster, the paper is not available, so we can't review the details of the approach the researchers used.) However if you've read anything by Taleb you'll know he rejects much of mainstream statistical inference^[Calling himself a "probablist."] and so his critiques tend to be more sweeping than just nitpicking the choice of statistical testing methodology.
+Still, again setting aside other concerns regarding design or the weaknesses inherent in this being an observational study, a researcher might question the validity of the p-value of 0.006 due to multiple tests being done within the study^[and call for a corresponding adjustment of the p-value that takes this into account like a [Bonferroni correction](https://en.wikipedia.org/wiki/Bonferroni_correction), an approach Taleb does mention in *Antifragile*.]. Additionally, one might critique the use of frequentist statistics and instead suggest using Bayesian or nonparametric methods^[It's tough to know without actually trying it, my guess is p of 0.006 would have a good chance surviving adjustments in statistical approach though.] which can be less susceptible to the distortions that can result when there are small subsamples^[[Are Orange Cars Really not Lemons](https://cdn2.hubspot.net/hubfs/2176909/Resources/Whitepaper_Are_Orange_Cars_Really_not_Lemons.pdf) walks through a change in methodology responding to such a distortion -- in this case related to how small subsamples can disproportionately show extreme results.]. (As a reminder, we're just looking at a poster, the paper is not available, so we can't review the details of the approach the researchers used.) However if you've read anything by Taleb you'll know he rejects much of mainstream statistical inference^[Calling himself a "probablist."] and so his critiques tend to be more sweeping than just nitpicking the choice of statistical testing methodology.
 
 ## "sigma change that doubles incidence"
 
