--- a/content/post/2024-08-27-how-you-should-keep-score-in-pickup-basketball/index.Rmd
+++ b/content/post/2024-08-27-how-you-should-keep-score-in-pickup-basketball/index.Rmd
@@ -34,7 +34,7 @@ The 2s and 3s scoring system is the minority position in most pickup games^[Arti
 
 ## What if you're playing make-it-take-it?
 
-*2s and 3s is only more balanced when you alternate possession after each score.* While alternating possession is the norm in full court pickup basketball, in half court the more common play style is for the scoring team to retain possession -- called "make-it-take-it." Under these conditions^[and continuing to ignore turnovers, offensive rebounds, and other complicating factors], calculating expected points is a little more complicated as you need to consider not just the expected points of the shot attempt but also the value associated with the chance of retaining possession (and making future shots) if you score^[A better descriptor might be "pseudo-expected points."].
+*2s and 3s is only more balanced when you alternate possession after each score.* While alternating possession is the norm in full court pickup basketball, in half court the more common play style is for the scoring team to retain possession -- called "make-it-take-it." Under these conditions^[and continuing to ignore turnovers, offensive rebounds, and other complicating factors], calculating expected points is a little more complicated as you need to consider not just the expected points of the shot attempt but also the value associated with the chance of retaining possession (and making future shots) if you score.
 
 Calculating the expected points for a shot is no longer just: 
 
@@ -44,7 +44,7 @@ but:
 
 $\left(\text{number of points}\right) \times \left(\text{shooting percentage}\right) \\+ \left(\text{chance last shot was made}\right) \times \left(\text{number of points}\right) \times \left(\text{shooting percentage}\right) \\+ \left(\text{chance last two shots were made}\right) \times \left(\text{number of points}\right) \times \left(\text{shooting percentage}\right) \\+ \ldots \left(\text{and so on and so on}\right) \ldots$
 
-If we consider the expected points of an interior shot (when playing 1s and 2s) the series can be represented as:
+If we consider the expected points of an interior shot (when playing 1s and 2s) the series can be approximated as:
 
 $$
 1 \times 0.45 + 1 \times 0.45^2 + \ldots + 1 \times 0.45^n
@@ -56,7 +56,7 @@ $$
 \frac{\text{(start value)}}{(1 - \text{rate})}
 $$
 
-We can use this to determine, roughly, the expected points^[As I discuss in [Finite geometric series] in the appendix the value is dependent on how many points are left in the game, but in practice, this doesn't make a big difference in conclusions.] for a shot attempt. If we plug in our values for a 1 pointer with 45% chance of being made:
+We can use this to approximate the expected points for a shot attempt (see [But you don't play pickup basketball to infinity] for why this is just an approximation). If we plug in our values for a 1 pointer with 45% chance of being made:
 
 $$
 \frac{(0.45 \times 1)}{(1 - 0.45)} = 0.82
@@ -68,9 +68,9 @@ $$
 \frac{(0.30 \times 2)}{(1 - 0.30)} = 0.86
 $$
 
-This shows a less than 5% difference in expected points if taking an interior or long range shot when playing make-it-take^[Maybe a slight edge for long range shots but pretty close (i.e. balanced).]. This is pretty balanced, which is good news as 1s and 2s make-it-take-it is the norm for half court pickup basketball. Compare this relative balance to the expected values when playing make-it-take by 2s and 3s.
+This shows a less than 5% difference in approximate expected points if taking an interior or long range shot when playing make-it-take^[Maybe a slight edge for long range shots but pretty close (i.e. balanced).]. This is pretty balanced, which is good news as 1s and 2s make-it-take-it is the norm for half court pickup basketball. Compare this relative balance to the expected values when playing make-it-take by 2s and 3s.
 
-Expected points for a 2 pointer in make-it-take-it:
+Approximate expected points for a 2 pointer in make-it-take-it:
 
 $$
 \frac{(0.45 \times 2)}{(1 - 0.45)} = 1.64
@@ -83,12 +83,6 @@ $$
 $$
 
 Under these conditions, an interior shot has almost 27% greater expected value than taking a long range shot (24% symmetric percent difference). In this case 2s and 3s is almost as imbalanced for interior shots as the 33% advantage we saw for distance shots when playing 1s and 2s with alternating possession. It's good then that 2s and 3s make-it-take-it is somewhat rare.
-
-**But you don't play pickup basketball to infinity...** 
-
-The solutions above are for an infinite series but in pickup basketball you typically play to some fixed value (e.g. 7, 11, 15, 16, 21, 25). What you actually want is the solutions for finite geometric series that are conditioned on how many points^[(actually scoring possessions)] are left in the game. When playing make-it-take-it by 1s and 2s, 1-pointers actually show a slight advantage if there are 4 or less points remaining in the game after which the small advantage shifts to 2-pointers. In general though, calculating the sums of the finite series tells the same overarching story as we told when calculating expected values with infinite series. "*Given 45% : 30% (interior : long range) shooting percentages, make-it-take-it by 1s and 2s is pretty balanced whereas make-it-take-it by 2s and 3s gives an expected points advantage to interior shooting.*" 
-
-Therefore infinite series seem to work fine as an approximation for expected points while being simple to describe as each statement does not need to be conditioned on how many points remain in the game. See the [Finite geometric series] section in the appendix if you're interested in more detail though. 
 
 ## Summary
 
@@ -187,7 +181,7 @@ table
 
 ## Taking action
 
-You might think that the expected values of different shots would naturally balance out. If you're playing by 1s and 2s with alternating possession (where deep shots are more valuable) you would think players would defend long range shots more aggressively which would lead to the shooting percentage on those shots dropping relative to interior shots. In practice though, this adjustment does not happen as much as would be expected by fully rational players. Instead, many people anchor their play style to whatever brand of basketball they are accustomed and do not fully adjust to the scoring and possession system in place. Given these tendencies, *what should you do?*
+You might think that the expected values of different shots would naturally balance out. If you're playing by 1s and 2s with alternating possession (where I've said deep shots are more valuable) you would think players would defend long range shots more aggressively which would lead to the shooting percentage on those shots dropping relative to interior shots. In practice though, this modification does not happen as much as would be expected by fully rational players^[Also some adjustments may be difficult to make regardless of intention.]. Instead, many people anchor their play style to whatever brand of basketball they are accustomed and do not fully adjust to the scoring and possession system in place. Given these tendencies, *what should you do?*
 
 1. Advocate for a balanced scoring system^[Being the ethical and upstanding individual you are, you should advocate for the most balanced system available. A more cynical person might say that you should try and skew the scoring system to whichever gives your team the greatest advantage... however I think it's more fun to just try and keep things balanced.]
 
@@ -300,7 +294,9 @@ data_chart %>%
   coord_fixed()
 ```
 
-The wider color hue range in make-it-take-it settings demonstrates how, as you deviate from balanced shooting percentage conditions, shot imbalance grows more quickly than when playing with alternating possession after scores^[This is why the 45%; 30% shooting conditions in the upper right and lower left, while being very different in terms of distance from the "perfect balance" lines are pretty similar in terms of proportion imbalanced.]. Everything above the red "perfect balance" lines (or curves in the cases of make-it-take) can be interpreted as shooting percentages where long range shooting has an expected points advantage. Everything below them represents shooting percentages where interior shooting has an advantage. For example, in games where interior shooting percentages are still ~45% but long range shooting is a bit worse, e.g. percentages in the low 20s, 1s and 2s with alternating possession after a score can actually be more balanced than 2s and 3s. However you would still be setting-up conditions for a lot of missed shots. 
+The greater range in color hue for make-it-take-it settings demonstrates how, as you deviate from balanced shooting percentage conditions, shot imbalance grows more quickly than when playing with alternating possession after scores. This is why the 45%; 30% standard shooting percentage points in the upper right and lower left charts, while being quite different in terms of distance from "perfect balance" are pretty similar in terms of proportion imbalanced. 
+
+Everything above the red "perfect balance" lines (or curves in the cases of make-it-take) can be interpreted as shooting percentages where long range shooting has an expected points advantage. Everything below them represents shooting percentages where interior shooting has an advantage. For example, in games where interior shooting percentages are still ~45% but long range shooting is a bit worse (e.g. percentages in the low 20s) 1s and 2s with alternating possession after a score can actually be more balanced than 2s and 3s. However you would be setting-up conditions for a lot of missed shots. 
 
 <img src="https://media0.giphy.com/media/eRaZhg8XZ3FoQ/giphy.gif">
 
@@ -308,17 +304,23 @@ Sometimes it's better to just play by all 1s.
 
 ## Appendix
 
-### Finite geometric series
+## But you don't play pickup basketball to infinity
 
-Calculating the finite geometric series is more precise as it allows us to consider how many points (/scoring rounds) are left in the game. Equation for calculating the value of a finite geometric series:
+The solutions in [What if you’re playing make-it-take-it?] are with infinite series but in pickup basketball you typically play to some fixed value (e.g. 7, 11, 15, 16, 21, 25). Evaluating [Finite geometric series] would allow you to condition your expected value calculations on how many points (or actually scoring possessions) remain. However, the values for the finite geometric series would only substantively differ from our infinite series calculations as you get near to the end of the game at which point (and even before then probably) you should start thinking in terms of event outcomes rather than expected points. Event outcomes are a problem of probability rather than expected value and require a different type of analysis. In the future I may do a "Simulating pickup basketball outcomes" post^[E.g. 1s and 2s make-it-take to 11, you're down 9 - 7 with the ball... what are your chances of winning if you...]. However for my purposes now, infinite series work fine as an approximation for expected points while remaining easy to describe (as each statement of value does not need to be predicated on how many points remain in the game). From the [Summary] section on I stop saying "approximate expected points" and just say^[This allows me to put both "alternating" and "make-it-take-it" calculations on the same figures without having to clarify that the former is expected points and the latter approximate expected points.] "expected points."
+
+## Finite geometric series
+
+*...much of this section was written while thinking about the problem in the wrong way...*
+
+Calculating the finite geometric series allows us to consider how many points (/scoring rounds) are left in the game. Equation for calculating the value of a finite geometric series:
 
 $$
 \frac{\text{(start value)} \cdot (1 - \text{rate}^n)}{(1 - \text{rate})}
 $$
 
-In our case, *n* is the number of remaining scoring possessions. However the number of remaining scoring possessions will depend on whether you're shooting interior or long-range shots. Long range shots are worth more points so there would be fewer scoring possessions until the end of the game. For example, if you're playing by 1s and 2s there will be ~half as many scoring possessions remaining if you're sinking long-range compared to interior shots^[In the curves I'm ignoring that some of these point values are impossible given the scoring systems.]. 
+In our case, *n* is the number of remaining scoring possessions. However the number of remaining scoring possessions will depend on whether you're shooting interior or long-range shots. Long range shots are worth more points so there would be fewer scoring possessions until the end of the game. For example, if you're playing by 1s and 2s there will be ~half as many scoring possessions remaining if you're sinking long-range compared to interior shots^[In the curves I'm ignoring that some of these point values are impossible given the scoring systems.]. Taking this into account, let's look at the expected value of each shot (still using our 45% and 30% shooting percentages).
 
-Taking this into account, let's look at the expected value of each shot if we range the number of points left in the game from 2 to 20 (still using our 45% and 30% shooting percentages).
+The usefulness of looking at these charts is limited for the reasons described in [But you don't play pickup basketball to infinity] (namely that you should think in terms of event outcomes, particularly near the end of the game). Also I've included point values in the charts that are impossible and calculations at points that are nonsensical. The purpose of the charts are mainly to show the pretty quick rate at which the expected values converge -- suggesting that, for most of the game, infinite series are a decent metric to use when considering shot selections if playing make-it-take-it. 
 
 ```{r}
 library(dplyr)
@@ -331,11 +333,11 @@ finite_geometric_series <- function(start, rate, n){
 data_1s2s_finite <- bind_rows(
   tibble(shot_pts = 1,
          shot_pct = 0.45,
-         points_remain = seq(2, 14, by = 2)) %>% 
+         points_remain = seq(2, 14, by = 1)) %>% 
     mutate(n_rounds = points_remain),
   tibble(shot_pts = 2,
          shot_pct = 0.30,
-         points_remain = seq(2, 14, by = 2)) %>% 
+         points_remain = seq(2, 14, by = 1)) %>% 
     mutate(n_rounds = points_remain / 2)  
 ) %>% 
   mutate(exp_pts = finite_geometric_series(shot_pts*shot_pct, shot_pct, n_rounds)) %>% 
@@ -357,19 +359,17 @@ data_1s2s_finite %>%
   guides(color = guide_legend(title = NULL))
 ```
 
-Interior shots actually have a *slight* advantage when there's <= 4 points remaining in the game. However the values are still not *that* far apart making for a reasonably balanced game throughout.
-
 Finite sums for make-it-take-it 2s and 3s: 
 
 ```{r}
 data_2s3s_finite <- bind_rows(
   tibble(shot_pts = 2,
          shot_pct = 0.45,
-         points_remain = seq(5, 24, by = 1)) %>% 
+         points_remain = seq(3, 24, by = 1)) %>% 
     mutate(n_rounds = points_remain / 2),
   tibble(shot_pts = 3,
          shot_pct = 0.30,
-         points_remain = seq(5, 24, by = 1)) %>% 
+         points_remain = seq(3, 24, by = 1)) %>% 
     mutate(n_rounds = points_remain / 3)  
 ) %>% 
   mutate(exp_pts = finite_geometric_series(shot_pts * shot_pct, shot_pct, n_rounds)) %>% 
@@ -381,7 +381,7 @@ data_2s3s_finite %>%
   # scale_x_continuous(breaks = seq(2, 20, by = 2)) +  
   theme_bw()+
   ylim(0, NA) +
-  scale_x_continuous(breaks = seq(6, 24, by = 6)) +  
+  scale_x_continuous(breaks = seq(3, 24, by = 3)) +  
   labs(
     title = "Expected Value of Shots Based on Points Left in the Game",
     subtitle = "2s and 3s, make-it-take-it",
